added description and link to GitHub

--- a/templates/moar.html
+++ b/templates/moar.html
@@ -9,8 +9,8 @@
 		<div class="col-lg-12">
 	<div class="jumbotron">
 	  <h1>I want more!</h1>
-	  <p>Bet you can't wait to see more awesomeness, eh? Sign up today to have daily awesomeness delivered to your home.</p>
-	  <p><a href="#" class="btn btn-warning btn-lg">Useless button</a></p>
+	  <p>Well, I'm too lazy to add more. Why don't you visit GitHub with the source code and make your own app, eh?</p>
+	  <p><a href="https://github.com/ialja/beautiful-web" class="btn btn-warning btn-lg">Show me the code</a></p>
 	</div>
 </div>
 </div>
