--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta name="description" content="Just a test web app created with Flask and Bootstrap, deployed on Heroku." />
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- making sure the app always find the static folder with bootstrap -->
 		<link href="{{ url_for('.static', filename='bootstrap/css/bootstrap.css') }}" rel="stylesheet" />
 		<link href="{{ url_for('.static', filename='css/bootstrap.icon-large.min.css') }}" rel="stylesheet" />
