--- a/templates/complicator_form.html
+++ b/templates/complicator_form.html
@@ -13,7 +13,7 @@
 	    <label for="age" class="col-lg-3 control-label">How old are you?</label>
 	    <div class="col-lg-9">
 	    	{% if error_age %}<label class="control-label">{{error_age}}</label>{% endif %}
-	      	<input type="text" class="form-control" id="age" placeholder="Your age" name="age" value="{{age}}" />
+	      	<input type="number" class="form-control" id="age" placeholder="Your age" name="age" value="{{age}}" />
 	    </div>
 	  </div>
 	  
@@ -57,7 +57,7 @@
 	    <label for="ignorance" class="col-lg-3 control-label">How ignorant are you?</label>
 	    <div class="col-lg-9">
 	    	{% if error_ignorance %}<label class="control-label">{{error_ignorance}}</label>{% endif %}
-	      	<input type="text" class="form-control" id="ignorance" placeholder="Estimated ignorance" name="ignorance" value="{{ignorance}}" />
+	      	<input type="number" class="form-control" id="ignorance" placeholder="Estimated ignorance" name="ignorance" value="{{ignorance}}" />
 	    </div>
 	</div>
 
@@ -65,7 +65,7 @@
 	    <label for="money_have" class="col-lg-3 control-label">How much money do you have?</label>
 	    <div class="col-lg-9">
 	    	{% if error_m_have %}<label class="control-label">{{error_m_have}}</label>{% endif %}
-	      	<input type="text" class="form-control" id="money_have" placeholder="Estimated balance today in €" name="money_have" value="{{money_have}}" />
+	      	<input type="number" class="form-control" id="money_have" placeholder="Estimated balance today in €" name="money_have" value="{{money_have}}" />
 	    </div>
 	</div>
 
@@ -73,7 +73,7 @@
 	    <label for="money_wants" class="col-lg-3 control-label">How much money do you want?</label>
 	    <div class="col-lg-9">
 	    	{% if error_m_wants %}<label class="control-label">{{error_m_wants}}</label>{% endif %}
-	      	<input type="text" class="form-control" id="money_wants" placeholder="Estimated needs today in €" name="money_wants" value="{{money_wants}}" />
+	      	<input type="number" class="form-control" id="money_wants" placeholder="Estimated needs today in €" name="money_wants" value="{{money_wants}}" />
 	    </div>
 	</div>
 
@@ -81,7 +81,7 @@
 	    <label for="money_spent" class="col-lg-3 control-label">How much money did you spend?</label>
 	    <div class="col-lg-9">
 	    	{% if error_m_spent %}<label class="control-label">{{error_m_spent}}</label>{% endif %}
-	      	<input type="text" class="form-control" id="money_spent" placeholder="Estimated spent today in €" name="money_spent" value="{{money_spent}}" />
+	      	<input type="number" class="form-control" id="money_spent" placeholder="Estimated spent today in €" name="money_spent" value="{{money_spent}}" />
 	    </div>
 	</div>
 
@@ -89,7 +89,7 @@
 	    <label for="popularity_online" class="col-lg-3 control-label">Your Klout score?</label>
 	    <div class="col-lg-9">
 	    	{% if error_klout %}<label class="control-label">{{error_klout}}</label>{% endif %}
-	      	<input type="text" class="form-control" id="popularity_online" placeholder="Write 0 if you don't use Klout" name="popularity_online" value="{{popularity_online}}" />
+	      	<input type="number" class="form-control" id="popularity_online" placeholder="Write 0 if you don't use Klout" name="popularity_online" value="{{popularity_online}}" />
 	    </div>
 	</div>
 
