added responsive video

--- a/templates/cats.html
+++ b/templates/cats.html
@@ -3,6 +3,6 @@
 {% block title %}Cats, cats, cats{% endblock %}
 
 {% block content %}
-<p>Every web page needs cats.</p>
+<p>Every web page needs cats. <span class="label label-info">CUTE</span></p>
 <p><img src="http://blog.ialja.com/images/uploads/404cats.jpg" /></p>
 {% endblock %}
