--- a/templates/faq.html
+++ b/templates/faq.html
@@ -26,8 +26,7 @@
   <div class="accordion-group">
     <div class="accordion-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-        Tell me more.
-      </a>
+        Tell me more.</a>
     </div>
     <div id="collapseTwo" class="accordion-body collapse">
       <div class="accordion-inner">
