--- a/templates/grumpy.html
+++ b/templates/grumpy.html
@@ -11,8 +11,8 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<button type="button" class="btn btn-info btn-lg">I are teh king of grumpeh!</button>
-		<button type="button" class="btn btn-warning btn-lg">Huh?</button>
+		<a href="/complexicator"><button type="button" class="btn btn-info btn-lg">I are teh king of grumpeh!</button></a>
+		<a href="/faq"><button type="button" class="btn btn-warning btn-lg">Huh?</button></a>
 	</div>
 </div>
 {% endblock %}
