--- a/templates/index.html
+++ b/templates/index.html
@@ -4,27 +4,44 @@
 
 {% block content %}
 
-	<div class="row">
-		<div class="col-lg-12">
-<h2>Recommended video of the day. You're welcome. <span class="label label-danger">New</span></h2>
-	<p><iframe width="560" height="315" src="//www.youtube.com/embed/tLt5rBfNucc" frameborder="0" allowfullscreen></iframe></p>
-			</div>
+
+
+ <div class="row">
+	<div class="col-lg-3">
+	  <h2>Enjoy this handpicked cute cat video.</h2>
+	</div> 
+	<div class="col-lg-9">
+	<div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
+	<iframe allowfullscreen="" src="http://www.youtube.com/embed/2kBvjHrA43A?feature=player_detailpage" frameborder="0"></iframe>
 	</div>
+	</div>
+</div>  
 
-	<div class="row">
-		<div class="col-lg-12">
 
-			<p><i class="icon-large icon-fire"></i> I can haz iconz. <i class="icon-large icon-beer"></i></p>
+ <div class="row">
+	<div class="col-lg-3">
+	  <h2>So cool.</h2>
+	</div> 
+	<div class="col-lg-9">
+		<br />
+		<p><i class="icon-large icon-fire"></i> I can haz iconz. <i class="icon-large icon-beer"></i></p>
+		<br />
+	</div>
+</div>  
 
+
+
+<div class="row">
+	<div class="col-lg-12">
 		<div class="jumbotron">
 			<p>Website completeness:</p>
 				<div class="progress progress-striped active">
 				  <div class="progress-bar progress-bar-info" style="width: 40%"></div>
 				</div>
-		</div>
-
+			
 		</div>
 	</div>
+</div>
 
 	
 {% endblock %}
