--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,6 +7,9 @@ h2, h3 {
 	color: #0087DC;
 }
 
+/* flex-video from BOOTPLY.com
+}-------------------------------------------------- */
+
 .flex-video {
   position: relative;
   padding-top: 25px;
@@ -98,6 +101,12 @@ body {
   z-index: 0;
 }
 
+.carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 2em;
+    line-height: 1.4;
+}
+
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 300px;
@@ -134,8 +143,19 @@ body {
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 20px;
-    font-size: 40px;
+    font-size: 2.5em;
     line-height: 1.4;
   }
 
 }
+
+/* some mobile fixes
+-------------------------------------------------- */
+
+@media (max-width: 480px) {
+  body {
+    padding-bottom: 120px;
+  }
+
+}
+
