--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,6 @@
 
 
 
-
 <!-- BOOTSTRAP 3.x LAYOUT -->
 <div class="navbar-wrapper">
   <div class="container">
@@ -45,23 +44,14 @@
 </div>
 
 
-<!-- Carousel
-================================================== -->
-<div id="myCarousel" class="carousel slide">
-<!--  <div class="carousel-inner"> -->
-    <div class="item active">
-      <img src="http://lorempixel.com/800/300/cats">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>Beautiful web</h1>
- 
-          <p>{{ self.title() }}</p>
+<div class="page-header">
+	<div class="item">
+  		<h1>Beautiful web<br/ ><small>{{ self.title() }}</small></h1>
+	</div>
+</div>
 
-      	</div>
-      </div>
-    </div>
-<!--  </div> -->
-</div><!-- /.carousel -->
+
+
 
 
 
