--- a/templates/cats.html
+++ b/templates/cats.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <p>Every web page needs cats. <span class="label label-info">CUTE</span></p>
-<p><img src="http://blog.ialja.com/images/uploads/404cats.jpg" /></p>
+<p><img src="http://blog.ialja.com/images/uploads/404cats.jpg" width="100%"/></p>
 {% endblock %}
