testing some more

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,34 +14,28 @@
 	<body>
 
 
-<!-- BOOTSTRAP 3.x LAYOUT -->
-<div class="navbar-wrapper">
-  <div class="container">
-
-    <div class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
 	    <a class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </a>
-        <a class="navbar-brand" href="/">BWeb</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav navbar-nav">
-		    <li><a href="/cats">Cats</a></li>
-		    <li><a href="/hipster">Hipster</a></li>
-		    <li><a href="/grumpy">Grumpy</a></li>
-		    <li><a href="/complexicator">Quiz</a></li>
-		    <li><a href="/faq">FAQ</a></li>
-		    <li><a href="/moar">Moar</a></li>
-          </ul>
-        </div>
+
+      <a class="brand" href="#">Project Name</a>
+
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+            <li> <a href="/">Home</a> </li>
+            <li><a href="/about">About</a></li>
+            <li> <a href="/help">Help</a> </li>
+            <li> <a href="#">Sign In</a> </li>
+        </ul>
       </div>
     </div>
-
   </div>
 </div>
-
 
 
 
