--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,37 +7,6 @@ h2, h3 {
   color: #0087DC;
 }
 
-/* flex-video from BOOTPLY.com
-}-------------------------------------------------- */
-
-.flex-video {
-  position: relative;
-  padding-top: 25px;
-  padding-bottom: 67.5%;
-  height: 0;
-  margin-bottom: 16px;
-  overflow: hidden;
-}
- 
-.flex-video.widescreen { padding-bottom: 57.25%; }
-.flex-video.vimeo { padding-top: 0; }
- 
-.flex-video iframe,
-.flex-video object,
-.flex-video embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
-  .flex-video { 
-    padding-top: 0; 
-  }
-}
-
 
 
 /* BOOTSTRAP 3.x GLOBAL STYLES
@@ -49,17 +18,50 @@ body {
 
 
 
-
-
-
-
-
-
-
-/* CUSTOMIZE THE CAROUSEL
+/* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
-/* Carousel base class */
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+
+
+.navbar-inverse .navbar-link {
+  color: #0087DC;
+}
+
+.navbar-inverse .navbar-link:hover {
+  color: #FF760A;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  color: #fff;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  color: #FF760A;
+  background-color: transparent;
+}
+
+.navbar-inverse .navbar-brand {
+  color: #FF760A;
+}
+
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
+  color: #ffffff;
+  background-color: transparent;
+}
+
+/* CUSTOMIZE THE HEADER
+-------------------------------------------------- */
+
 .page-header {
   position: relative;
   padding-top: 0px;
@@ -98,6 +100,58 @@ body {
 }
 
 
+
+/* flex-video from BOOTPLY.com
+}-------------------------------------------------- */
+
+.flex-video {
+  position: relative;
+  padding-top: 25px;
+  padding-bottom: 67.5%;
+  height: 0;
+  margin-bottom: 16px;
+  overflow: hidden;
+}
+ 
+.flex-video.widescreen { padding-bottom: 57.25%; }
+.flex-video.vimeo { padding-top: 0; }
+ 
+.flex-video iframe,
+.flex-video object,
+.flex-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
+  .flex-video { 
+    padding-top: 0; 
+  }
+}
+
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 768px) {
+
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+    margin-top: 20px;
+    margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+  }
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
+
+}
+
 /* some mobile fixes
 -------------------------------------------------- */
 
@@ -118,3 +172,4 @@ body {
 }
 
 }
+
