--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
 
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="container">
-      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+      	<a class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </a>
         <a class="navbar-brand" href="/">BWeb</a>
         <div class="nav-collapse collapse">
           <ul class="nav navbar-nav">
