--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
 
 <div class="page-header">
 	<div class="item">
-  		<h1>Beautiful web<br/ ><small>{{ self.title() }}</small></h1>
+  		<h1>Beautiful web<br /><small>{{ self.title() }}</small></h1>
 	</div>
 </div>
 
@@ -76,7 +76,7 @@
 </div>
 
 
-	<script src="{{ url_for('.static', filename='js/jquery-1.10.2.min.js') }}"></script>
+	<script src="{{ url_for('.static', filename='js/jquery-1.10.2.js') }}"></script>
 	<script src="{{ url_for('.static', filename='bootstrap/js/bootstrap.js') }}"></script>
 
 	</body>
