upgraded to bootstrap 3 stable

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 	</div> 
 	<div class="col-lg-9">
 		<br />
-		<p><i class="icon-large icon-fire"></i> I can haz iconz. <i class="icon-large icon-beer"></i></p>
+		<p><span class="glyphicon glyphicon-gift"></span> I can haz iconz. <span class="glyphicon glyphicon-inbox"></span></p>
 		<br />
 	</div>
 </div>  
