--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -22,7 +22,7 @@ body {
 -------------------------------------------------- */
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
+#top-nav {
   position: absolute;
   top: 0;
   left: 0;
@@ -57,6 +57,16 @@ body {
 .navbar-inverse .navbar-brand:focus {
   color: #ffffff;
   background-color: transparent;
+}
+
+
+/* FOOTER NAVBAR
+-------------------------------------------------- */
+
+#bottom-nav {
+
+  padding: 10px;
+
 }
 
 /* CUSTOMIZE THE HEADER
@@ -140,12 +150,14 @@ body {
 @media (min-width: 768px) {
 
   /* Navbar positioning foo */
-  .navbar-wrapper {
+  #top-nav {
     margin-top: 20px;
+    margin-left: 3%;
+    margin-right: 3%;
     margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
   }
   /* The navbar becomes detached from the top, so we round the corners */
-  .navbar-wrapper .navbar {
+  #top-nav {
     border-radius: 4px;
   }
 
