--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1.0">
 		<!-- making sure the app always find the static folder with bootstrap -->
 		<link href="{{ url_for('.static', filename='bootstrap/css/bootstrap.css') }}" rel="stylesheet" />
-		<link href="{{ url_for('.static', filename='css/bootstrap.icon-large.min.css') }}" rel="stylesheet" />
 		<link href="{{ url_for('.static', filename='css/custom.css') }}" rel="stylesheet" />
 		<title>BWeb - {% block title %}{% endblock %}</title>
 	</head>
@@ -14,34 +13,33 @@
 	<body>
 
 
-<!-- BOOTSTRAP 3.x LAYOUT -->
-<div class="navbar-wrapper">
-  <div class="container">
 
-    <div class="navbar navbar-inverse navbar-static-top">
-      <div class="container">
-      	<a class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </a>
-        <a class="navbar-brand" href="/">BWeb</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav navbar-nav">
-		    <li><a href="/cats">Cats</a></li>
-		    <li><a href="/hipster">Hipster</a></li>
-		    <li><a href="/grumpy">Grumpy</a></li>
-		    <li><a href="/complexicator">Quiz</a></li>
-		    <li><a href="/faq">FAQ</a></li>
-		    <li><a href="/moar">Moar</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
 
+<nav class="navbar navbar-inverse" role="navigation" id="top-nav">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">BWeb</a>
   </div>
-</div>
 
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+	    <li><a href="/cats">Cats</a></li>
+	    <li><a href="/hipster">Hipster</a></li>
+	    <li><a href="/grumpy">Grumpy</a></li>
+	    <li><a href="/complexicator">Quiz</a></li>
+	    <li><a href="/faq">FAQ</a></li>
+	    <li><a href="/moar">Moar</a></li>
+    </ul>
+
+  </div><!-- /.navbar-collapse -->
+</nav>
 
 
 
@@ -65,18 +63,16 @@
 
 	</div>
 
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation" id="bottom-nav">
 
-<div class="navbar navbar-fixed-bottom">
-  <div class="row">
-  	<div class="col-lg-12">
-		<br/><p class="pull-right"><a href="#">Back to top</a></p>
+		<br /><p class="pull-right"><a href="#">Back to top</a></p>
 	    <p>Created with <a href="http://flask.pocoo.org">Flask</a>, <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://www.bootply.com/62603">Bootply</a>, <a href="http://glyphicons.com/">Glyphicons</a>, <a href="http://marcoceppi.github.io/bootstrap-glyphicons/">Bootstrap Glyphicons</a> and a lot of cat hair.</p>
-  	</div>
-  </div>
-</div>
+
+</nav>
 
 
-	<script src="{{ url_for('.static', filename='js/jquery-1.10.2.js') }}"></script>
+
+	<script src="{{ url_for('.static', filename='js/jquery-1.10.2.min.js') }}"></script>
 	<script src="{{ url_for('.static', filename='bootstrap/js/bootstrap.js') }}"></script>
 
 	</body>
