active link now changes style in navbar

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -59,6 +59,12 @@ body {
   background-color: transparent;
 }
 
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
+  color: #000;
+  background-color: #D6621C;
+}
 
 /* FOOTER NAVBAR
 -------------------------------------------------- */
