displaying score on bar

--- a/templates/complicator_result.html
+++ b/templates/complicator_result.html
@@ -22,7 +22,7 @@
     {% endif %}
     {% if level == "extreme" %}
     	 progress-bar-danger
-    {% endif %}" role="progressbar" aria-valuenow="{{complexity}}" aria-valuemin="0" aria-valuemax="100" style="width: {{complexity}}%;"><span class="sr-only">{{complexity}}% complexity</span></div>
+    {% endif %}" role="progressbar" aria-valuenow="{{complexity}}" aria-valuemin="0" aria-valuemax="100" style="width: {{complexity}}%;"><span>{{complexity}}% complexity</span></div>
 	</div>
 	<p>{{interpretation}}</p>
 	{% endif %}
