removing old validation

--- a/templates/complicator_form.html
+++ b/templates/complicator_form.html
@@ -12,8 +12,8 @@
 	  <div class="form-group">
 	    <label for="age" class="col-lg-3 control-label">How old are you?</label>
 	    <div class="col-lg-9">
-	    	<div class="error-label-age error-label"></div>
-	      	<input type="number" class="form-control" id="age" placeholder="Your age" name="age" value="{{age}}" required />
+	    	<span class="error-label-age error-label"></span>
+	      	<input type="number" class="form-control" id="age" placeholder="Your age" name="age" required />
 	    </div>
 	  </div>
 
