--- a/templates/complicator_form.html
+++ b/templates/complicator_form.html
@@ -12,7 +12,7 @@
 	  <div class="form-group">
 	    <label for="age" class="col-lg-3 control-label">How old are you?</label>
 	    <div class="col-lg-9">
-	    	<span class="error-label-age error-label"></span>
+	    	<div class="error-label-age error-label"></div>
 	      	<input type="number" class="form-control" id="age" placeholder="Your age" name="age" required />
 	    </div>
 	  </div>
@@ -60,7 +60,7 @@
 	    <label for="ignorance" class="col-lg-3 control-label">How ignorant are you?</label>
 	    <div class="col-lg-9">
 	    	<div class="error-label-ignorance error-label"></div>
-	      	<input type="number" class="form-control" id="ignorance" placeholder="Estimated ignorance" name="ignorance" value="{{ignorance}}" required />
+	      	<input type="number" class="form-control" id="ignorance" placeholder="Estimated ignorance" name="ignorance" required />
 	    </div>
 	</div>
 
@@ -68,7 +68,7 @@
 	    <label for="money_have" class="col-lg-3 control-label">How much money do you have?</label>
 	    <div class="col-lg-9">
 	    	<div class="error-label-money_have error-label"></div>
-	      	<input type="number" class="form-control" id="money_have" placeholder="Estimated balance today in €" name="money_have" value="{{money_have}}" required />
+	      	<input type="number" class="form-control" id="money_have" placeholder="Estimated balance today in €" name="money_have" required />
 	    </div>
 	</div>
 
@@ -76,7 +76,7 @@
 	    <label for="money_wants" class="col-lg-3 control-label">How much money do you want?</label>
 	    <div class="col-lg-9">
 	    	<div class="error-label-money_wants error-label"></div>
-	      	<input type="number" class="form-control" id="money_wants" placeholder="Estimated needs today in €" name="money_wants" value="{{money_wants}}" required />
+	      	<input type="number" class="form-control" id="money_wants" placeholder="Estimated needs today in €" name="money_wants" required />
 	    </div>
 	</div>
 
@@ -84,7 +84,7 @@
 	    <label for="money_spent" class="col-lg-3 control-label">How much money did you spend?</label>
 	    <div class="col-lg-9">
 	    	<div class="error-label-money_spent error-label"></div>
-	      	<input type="number" class="form-control" id="money_spent" placeholder="Estimated spent today in €" name="money_spent" value="{{money_spent}}" required />
+	      	<input type="number" class="form-control" id="money_spent" placeholder="Estimated spent today in €" name="money_spent" required />
 	    </div>
 	</div>
 
@@ -92,7 +92,7 @@
 	    <label for="popularity_online" class="col-lg-3 control-label">Your Klout score?</label>
 	    <div class="col-lg-9">
 	    	<div class="error-label-popularity_online error-label"></div>
-	      	<input type="number" class="form-control" id="popularity_online" placeholder="Write 0 if you don't use Klout" name="popularity_online" value="{{popularity_online}}" required />
+	      	<input type="number" class="form-control" id="popularity_online" placeholder="Write 0 if you don't use Klout" name="popularity_online" required />
 	    </div>
 	</div>
 
