--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
 		<!-- making sure the app always find the static folder with bootstrap -->
 		<link href="{{ url_for('.static', filename='bootstrap/css/bootstrap.css') }}" rel="stylesheet" />
 		<link href="{{ url_for('.static', filename='css/custom.css') }}" rel="stylesheet" />
+
+		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 		<title>BWeb - {% block title %}{% endblock %}</title>
 	</head>
 
