increased website completeness

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 		<div class="jumbotron">
 			<p>Website completeness:</p>
 				<div class="progress progress-striped active">
-				  <div class="progress-bar progress-bar-info" style="width: 40%"></div>
+				  <div class="progress-bar progress-bar-success" style="width: 70%"></div>
 				</div>
 			
 		</div>
