updated error page style

--- a/templates/403.html
+++ b/templates/403.html
@@ -3,5 +3,5 @@
 {% block title %}403 aka Forbidden{% endblock %}
 
 {% block content %}
-<h2>Nothing to see here, why don't you just visit the <a href="{{ url_for('index') }}">main page</a>, eh?</h2>
+<div class="jumbotron"><h1>403 Forbidden</h1><p>Nothing to see here, why don't you just visit the <a href="{{ url_for('index') }}">main page</a>, eh?</p></div>
 {% endblock %}
