--- a/templates/500.html
+++ b/templates/500.html
@@ -3,5 +3,5 @@
 {% block title %}500 Internal Server Error{% endblock %}
 
 {% block content %}
-<h2>Ugh, it's not you, it's me. The server seems to be overloaded. Can you check back again later, please? Ktnxbai.</h2>
+<div class="jumbotron"><h1>500 Internal Server Error</h1><p>Ugh, it's not you, it's me. The server seems to be overloaded. Can you check back again later, please? Ktnxbai.</p></div>
 {% endblock %}
