--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,6 @@
 {% block title %}Oh noez, 404!{% endblock %}
 
 {% block content %}
-<h1>Hey, what just happened here?</h1>
-<p>Not sure. Let's pretend everything is all right. Just return back to the <a href="{{ url_for('index') }}">main page</a>, m'kay?</p>
+<div class="jumbotron"><h1>Hey, what just happened here?</h1>
+<p>Not sure. Let's pretend everything is all right. Just return back to the <a href="{{ url_for('index') }}">main page</a>, m'kay?</p></div>
 {% endblock %}
